2005-10-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/ICilWorker.cs
	  Mono.Cecil.Cil/CilWorker.cs:
		ShortInlineI operands are signed.
		Spotted by Rodrigo B. de Oliveira.

	* CodeGen/templates/OpCodes.cs
	  Mono.Cecil.Cil/OpCodes.cs:
		Add 2.0 opcodes.

2005-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/AssemblyDefinition.cs: Added an override for ToString to
	ease debugging.
	* Mono.Cecil/ModuleDefinition.cs: Make SecurityDeclaration works with
	2.0 assemblies.
	* Mono.Cecil/ReflectionReader.cs: Modified BuildSecurityDeclaration
	to use the new SecurityDeclarationReader (supporting both formats).
	* Mono.Cecil/SecurityAction.cs: Removed actions that were "cutted" out
	of 2.0 final.
	* Mono.Cecil/SecurityDeclarationReader.cs: New. Handle both the 1.x 
	and 2.0 formats for reading declarative security.

2005-10-18  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericParameter.cs:
		A little change before the fix.

	* Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil.Cil/MethodBody.cs:
		Implement method cloning.

	* Mono.Cecil/ModuleReference.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/TypeReference.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/FieldReference.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/PropertyDefinition.cs
	  Mono.Cecil/AssemblyFactory.cs:
		Small API change.

	* Mono.Cecil.Cil/CodeReader.cs:
		Fix variables names.

	TODO before 0.1:
		Fix generic parameters,
		generic writing,
		constructor changes (with S.Type and SR.*Info)

2005-10-14  Jb Evain  <jbevain@gmail.com>

	Work on generics support.

	* CodeGen/cecil.xml: new collections, coded indexes, opcodes.

	* Mono.Cecil/IGenericParameterCollection.cs
	  Mono.Cecil/GenericParameterCollection.cs
	  Mono.Cecil/IGenericArgumentCollection.cs